<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_form_to_create_an_account"
        android:layout_gravity="center"
        android:id="@+id/fill"
        android:padding="20dp"
        android:paddingRight="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_first_name"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/first"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_last_name"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/last"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:gravity="center"
        android:padding="30dp"
       android:id="@+id/phone"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/pass"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/email"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/address"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:padding="30dp"
        android:id="@+id/submit"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:onClick="btnsubmit"

    />
</androidx.appcompat.widget.LinearLayoutCompat>